# amd-miner

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1  get-miner.sh  make.sh  run-miner.sh
.github/workflows/: build.yml
src/: blake3.cu  constants.h  main.cc  messages.h  mining.h  opencl_util.h  template.h  worker.h
